--- a/dissertation.tex
+++ b/dissertation.tex
@@ -1,5 +1,13 @@
 \documentclass{l4proj}
 
+\usepackage{csquotes}
+\usepackage[
+backend=biber,
+style=ieee
+]{biblatex}
+
+\addbibresource{bibliography.bib}
+
 \begin{document}
 \title{Building Applications on the SAFE Network}	
 \author{David Brown}
@@ -15,5 +23,28 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 
 \chapter{Introduction}
 \pagenumbering{arabic}
+
+\begin{displayquote}
+The SAFE Network is a decentralized data storage and communications network that provides a secure, efficient
+and low-cost infrastructure for everyone \cite{safenetwork}.
+\end{displayquote}
+
+The SAFE Network \cite{safenetwork} is an open-source project being developed by a Scottish company Maidsafe \cite{maidsafe}. Their aim is to build "The World's First Autonomous Data Network". An 'Autonomous Data Network' in simple terms, is "...a network that manages all our data and communications without any human intervention and without intermediaries" \cite{autonomous-data-networks}. This network will be decentralised, splitting data and then storing it around the world on computers called 'vaults'. I will go into more detail on the SAFE Network and how it works in a later chapter.
+
+\section{Aims}
+
+My main goal for this project is to explore the usage of the SAFE Network for the purposes of providing decentralised and 'permissionless' access to websites like Wikipedia.
+
+The program I build will be able to upload ZIM\cite{zim} files to the SAFE Network, provide public links to everyone using the application and then be able to read/browse the files. These files will be immutable, this is to help ensure that once a user has uploaded a ZIM file to the network, that it cannot be altered by anyone once it has been uploaded (apart from the functionality to delete it). ZIM files are a convenient way of being able to package/archive a website (web content) into an offline file that can then be browsed and distributed easily.
+
+By building this application, it will be easy to draw conclusions on whether this method of 'archiving' websites to the SAFE Network is sensible. ZIM files themselves can easily be tens of gigabytes in size. Thus in building this program it will be feasible to ascertain how well the SAFE Network can handle large files.
+
+\section{Motivation}
+
+In my opinion, the right to liberty and the unobstructed access to information is the most important right we have. Throughout history, a common tactic of \textit{evil} governments or people is to block access to information. By doing this, they try to break down a culture, to control people. The most prominent example of this was the Nazi Book Burning Campaign \cite{book-burning}. The goal of this was to destroy any literature or information that could subvert the ideologies that Nazism is built upon. A modern day example of this is North Korea, government censorship infiltrates every aspect of the culture \cite{north-korean-media}. State run media spouts constant lies and propaganda to try and silence any doubt that their way of life is entirely controlled and orchestrated at the whim of the countries dictators. 
+
+Close to the heart of this project, is the block on Wikipedia in Turkey \cite{turkey}. One finds it hard to comprehend that a country, enjoyed by many as a popular holiday destination, is so publicly blocking their citizens access to freedom of speech and educational content. It is for the above reasons that I find the promises of the SAFE Network so alluring. An 'internet' in which it is impossible to block or orchestrate what content can be accessed without blocking access to the entire thing. A network that is built from the ground up to protect the free access to data, working autonomously and without judgement on what information is being stored and shared. By hosting archives/copies of websites such as Wikipedia and Wikispecies on the SAFE Network, it could allow people from all over the world to access content that they haven't before. More importantly for some people, for them to be able to access the content without their governments being able to detect what they are looking at.
+
+\printbibliography
 
 \end{document}
